--- a/dashboard/components/shared/charts/ChartBarVertical/ChartBarVertical.css
+++ b/dashboard/components/shared/charts/ChartBarVertical/ChartBarVertical.css
@@ -19,7 +19,7 @@
 .chart-bar-vertical-expand-btn,
 .chart-bar-vertical-refresh-btn {
     position: absolute;
-    top: -28px;
+    top: -55px;
     z-index: 10;
     width: 24px;
     height: 24px;
