--- a/dashboard/components/shared/charts/ChartLine/ChartLine.css
+++ b/dashboard/components/shared/charts/ChartLine/ChartLine.css
@@ -7,7 +7,7 @@
 
 .chart-line-expand-btn {
     position: absolute;
-    top: -28px;
+    top: -52px;
     right: -5px;
     z-index: 10;
     width: 24px;
@@ -37,7 +37,7 @@
 
 .chart-line-refresh-btn {
     position: absolute;
-    top: -28px;
+    top: -52px;
     right: 28px;
     z-index: 10;
     width: 24px;
