--- a/dashboard/components/shared/charts/ChartMap/ChartMap.css
+++ b/dashboard/components/shared/charts/ChartMap/ChartMap.css
@@ -6,7 +6,7 @@
 
 .chart-map-expand-btn {
     position: absolute;
-    top: -28px;
+    top: -52px;
     right: -5px;
     z-index: 10;
     width: 24px;
@@ -36,7 +36,7 @@
 
 .chart-map-refresh-btn {
     position: absolute;
-    top: -28px;
+    top: -52px;
     right: 28px;
     z-index: 10;
     width: 24px;
