--- a/dashboard/components/shared/charts/ChartPie/ChartPie.css
+++ b/dashboard/components/shared/charts/ChartPie/ChartPie.css
@@ -10,7 +10,7 @@
 
 .chart-pie-expand-btn {
     position: absolute;
-    top: -28px;
+    top: -52px;
     right: -5px;
     z-index: 10;
     width: 24px;
@@ -34,7 +34,7 @@
 
 .chart-pie-refresh-btn {
     position: absolute;
-    top: -28px;
+    top: -52px;
     right: 28px;
     z-index: 10;
     width: 24px;
